# svgpath-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: basic.rs
src/: bbox.rs  lexer.rs  lib.rs  matrix.rs  parser.rs  path.rs  reverse.rs  simplify.rs  utils.rs
tests/: path.rs  simple-path.rs
